mostrar ventana: se agrega efecto de aparición de la ventana

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
+<body onload="startCount()">
 
     <nav class="navbar">
 
@@ -32,7 +32,7 @@
     </nav>
 
     <!--- starts modal window -->
-    <div class="windowBakcground" id="windowBakcground">
+    <div class="windowBakcground" id="windowBackground" style="display: none;">
 
         <div class="windowContainer" id="windowContainer">
 
