ventana modal: se distribuyen y posicionan los elementos de la ventana (imagen, texto y botones)

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </nav>
 
     <!--- starts modal window -->
-    <div class="windowBakcground" id="windowBackground">
+    <div class="windowBackground" id="windowBackground">
 
         <div class="windowContainer" id="windowContainer">
 
             <!-- close button -->
-            <button class="closeBtn" id="closeBtn"><i class="fa-solid fa-circle-xmark"></i></button>
+            <button class="closeBtn" id="closeBtn"><i class="fa-solid fa-xmark"></i></button>
 
             <img src="./img/buy.png" alt="" class="windowImage">
             
