se agregó el segundo botón de la ventana modal

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <span>$59.99 USD/ $79.99 CAD</span>
 
                 <button class="btn">Buy Now<i class="fa-solid fa-cart-plus"></i></button>
-                
+
+                <button class="btn">Coins<i class="fa-solid fa-coins"></i></button>
+
             </div>
 
 
