se agrega un nuevo botón a la ventana modal

--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
                 Plus, earn My Nintendo Gold Points you can use toward more games and DLC.</p>
                 <span>$59.99 USD/ $79.99 CAD</span>
 
+            <!-- buttons -->
+            <div class="windowButtons">
                 <button class="btn">Buy Now<i class="fa-solid fa-cart-plus"></i></button>
 
-                <button class="btn">Coins<i class="fa-solid fa-coins"></i></button>
+                <button class="btn">Golden Points<i class="fa-solid fa-star"></i></button>
+            </div>
+            <!-- end buttons -->
 
             </div>
 
